--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,22 +2,59 @@ version: "3.8"
 
 services:
   backend:
+    image: docker.io/thanh2910/final_project:backend
     build:
-      - context: ./backend
-      - dockerfile: Dockerfile
-    command: uvicorn app.main:app --root-path /api --proxy-headers --host 0.0.0.0 --port 8000
+      context: ./backend
+      dockerfile: Dockerfile
+    command: uvicorn app.main:app --reload --proxy-headers --host 0.0.0.0 --port 8000
+    ports:
+      - 8000:8000
+    env_file:
+      - backend/.env
+    volumes:
+      - ./backend:/code
+    networks:
+      - app
+    restart: always
 
   frontend:
+    image: docker.io/thanh2910/final_project:frontend
     build:
-      - context: ./frontend
-      - target: development
-      - dockerfile: Dockerfile
+      context: ./frontend
+      target: builder
+      dockerfile: Dockerfile
     ports:
-      - "8080:80"
+      - 3000:3000
     volumes:
       - ./frontend:/app
+    networks:
+      - app
     depends_on:
       - backend
+
+  # db:
+  #   image: postgres:alpine
+  #   ports:
+  #     - "5432:5432"
+  #   environment:
+  #     POSTGRES_PASSWORD: postgres
+  #     POSTGRES_USER: postgres
+  #     POSTGRES_DB: postgres_db
+  #     POSTGRES_PORT: 5432
+  #     PGDATA: /var/lib/postgresql/data/finalproject_db
+  #   healthcheck:
+  #     test: ["CMD-SHELL", "pg_isready", "-d", "postgres_db"]
+  #     interval: 30s
+  #     timeout: 30s
+  #     retries: 5
+  #     start_period: 30s
+  #   env_file:
+  #     - ./backend/.env
+  #   volumes:
+  #     - ./postgres-data:/var/lib/postgresql/data
+  #   restart: always
+  #   networks:
+  #     - app
 
 networks:
   app:
