--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,6 +12,7 @@ RUN npm install
 
 # Rebuild the source code only when needed
 FROM node:16-alpine AS builder
+ARG NEXT_PUBLIC_BACKEND_URL
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
