--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
 alembic==1.10.2
 fastapi==0.95.1
-uvicorn[standard]==0.21.1
+minio==7.1.15
+psycopg2==2.9.6
+python-dotenv==1.0.0
+python-multipart==0.0.6
 sqlalchemy==1.4.46
-psycopg2
-python-dotenv
+uvicorn[standard]==0.21.1
