--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.2.4",
+    "form-data": "^4.0.0",
     "next": "13.2.4",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
