--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,11 @@
 alembic==1.10.2
 fastapi==0.95.1
 minio==7.1.15
+pandas==1.5.3
 psycopg2==2.9.6
 python-dotenv==1.0.0
 python-multipart==0.0.6
 sqlalchemy==1.4.46
+torch==1.11.0
+torchvision==0.12.0
 uvicorn[standard]==0.21.1
