--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,14 @@ services:
       dockerfile: Dockerfile
     command: uvicorn app.main:app --reload --proxy-headers --host 0.0.0.0 --port 8000
     ports:
+      - 3000:3000
       - 8000:8000
     env_file:
       - backend/.env
     volumes:
       - ./backend:/code
-    networks:
-      - app
+    # networks:
+    #   - app
     restart: always
 
   frontend:
@@ -23,12 +24,13 @@ services:
       context: ./frontend
       target: development
       dockerfile: Dockerfile
-    ports:
-      - 3000:3000
+    # ports:
+    #   - 3000:3000
     volumes:
       - ./frontend:/app
-    networks:
-      - app
+    # networks:
+    #   - app
+    network_mode: "service:backend"
     depends_on:
       - backend
 
